--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .idea
 .git
 clients/test.py
-server/log/*.log
+server/logs/*.log
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
